syntax = "proto3";
package pb;
option go_package = "internal/pb";

message Blank {
  string blank = 1;
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message CategoryResponse {
  Category category = 1;
}

message CategoryList {
  repeated Category categories = 1;
}

message CategoryGetRequest {
  string id = 1;
}

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (Category) { }
  rpc ListCategories(Blank) returns (CategoryList) { }
  rpc GetCategory(CategoryGetRequest) returns (Category) { }
}

